--- a/composer.json
+++ b/composer.json
@@ -9,12 +9,13 @@
     "type": "project",
     "require": {
         "php": "^7.1.3",
+        "ext-curl": "*",
+        "ext-gd": "*",
+        "ext-mbstring": "*",
         "ext-openssl": "*",
         "ext-pdo": "*",
-        "ext-mbstring": "*",
-        "ext-tokenizer": "*",
         "ext-pdo_mysql": "*",
-        "ext-curl": "*",
+        "ext-tokenizer": "*",
         "barryvdh/laravel-dompdf": "^0.8.0@dev",
         "dimsav/laravel-translatable": "^9.0",
         "doctrine/dbal": "^2.9@dev",
@@ -105,6 +106,10 @@
         "post-autoload-dump": [
             "Illuminate\\Foundation\\ComposerScripts::postAutoloadDump",
             "@php artisan package:discover"
+        ],
+        "post-install-cmd": [
+    "chmod -R 755 bootstrap\/cache",
+    "php artisan cache:clear"
         ]
     },
     "config": {
