--- a/app.yaml
+++ b/app.yaml
@@ -4,13 +4,11 @@ env: flex
 runtime_config:
   document_root: public
 
-# Ensure we skip ".env", which is only for local development
+
 skip_files:
-  - .env
+   .env
 
 env_variables:
-  # Put production environment variables here.
   APP_LOG: errorlog
   APP_KEY: base64:ZgDXwd82ynaMkFc6zS1P+AVkLsLnHdSwIdHgogOgm9A=
   APP_STORAGE: /tmp
-  VIEW_COMPILED_PATH: /tmp
