--- a/app.yaml
+++ b/app.yaml
@@ -1,39 +1,27 @@
-runtime: php  # language of the app
-env: flex     # let app engine know we use flexible environment
+runtime: php
+env: flex
+
 runtime_config:
- document_root: public   #folder where index.php is
+  document_root: public
+
 # Ensure we skip ".env", which is only for local development
 skip_files:
- - .env #we want to skip this to make sure we don’t mess stuff up on the server
-env_variables:
- # Put production environment variables here.
- APP_ENV: local   # or production
- APP_DEBUG : true # or false 
- APP_KEY: base64:j7aqbvzWUx/BbUnoUsemSAceXc4C/MKz6H92MFp9Tuw=
-#go to generate app key paragraf in this tutorial
- CACHE_DRIVER: database
-# instead of putting the cache in the database I recommend using redis
- SESSION_DRIVER: database #or file since both work
- APP_LOG: daily
- APP_TIMEZONE: GMT+8 #your timezone of choice
+  - .env
 
-# follow the part of the tutorial on setting up your SQL database
- DB_CONNECTION: mysql
- DB_HOST: localhost
- DB_DATABASE: fbcstore
- DB_USERNAME: root
- DB_PASSWORD: 1qaz2wsx
- DB_SOCKET: /cloudsql/fbcstore
- QUEUE_DRIVER: database #in case you execute queued jobs
- MAIL_DRIVER: smtp
- MAIL_HOST: smtp.sparkpostmail.com
- MAIL_PORT: 587
- MAIL_USERNAME: SMTP_Injection
- MAIL_PASSWORD: 6e5517c7513cd313540f612ce3706bec5e0ac253
- LOG_DELETE:  true # this is a parameter added by us in the project .env file. You can add here any setting you would add to your .env file
- GOOGLE_VISION_PROJECT_ID : fbcstore
-#we need this for the flex environment
+env_variables:
+  # Put production environment variables here.
+  APP_LOG: errorlog
+  APP_KEY: base64:j7aqbvzWUx/BbUnoUsemSAceXc4C/MKz6H92MFp9Tuw=
+  CACHE_DRIVER: database
+  SESSION_DRIVER: database
+  ## Set these environment variables according to your CloudSQL configuration.
+  DB_HOST: localhost
+  DB_DATABASE: fbcstore
+  DB_USERNAME: fbcstore
+  DB_PASSWORD: fbcstore
+  DB_SOCKET: "/cloudsql/fbcstore:asia-east1:fbcstore"
+
 beta_settings:
-   # for Cloud SQL, set this value to the Cloud SQL connection name,
-   # e.g. "project:region:cloudsql-instance"
-   cloud_sql_instances: fbcstore:asia-east1:fbcstore
+    # for Cloud SQL, set this value to the Cloud SQL connection name,
+    # e.g. "project:region:cloudsql-instance"
+    cloud_sql_instances: "fbcstore:asia-east1:fbcstore"
