--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,7 @@
 /public/storage
 /public/css
 /public/js
-public/vendor
+/public/vendor
 /public/themes
 /storage/*.key
 /vendor
@@ -22,5 +22,4 @@ config/database.aws.php
 banner.cfg
 banner.cfg
 .env
- - Copy.env
-extract.zip
+*.env
